# goalie

./: README.md  pyproject.toml
goalie/: __main__.py  dynamic_goal.py  from_args.py  goal.py  goal_server.py  std_lib.py
goalie/tests/: GoalieLibraryTest.py  GoalieTest.py
