[project]
name = "Goalie"
version = "0.1.0"
description = ""
license = {text = "Apache License"}
authors = [
    { name = "Michael R. Bernstein", email = "mrb1778@gmail.com" }
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "starlette>=1.0.0",
    "xutils>=2.2.2"
]